Settings: Handle initializing Cellular in MD UI

Currently we do not show 'Initializing' either in the oobe/login UI
or in Settings. This fixes both.

Bug: 753319
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I6aa82a26d7447120a19a5632af6876a6d10fb320
Reviewed-on: https://chromium-review.googlesource.com/618278
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Ben Chan <benchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495769}
Former-commit-id: 52c38188a64a6ad8727906a33e799f3e329c6e5c