ui/webui/resources/cr_elements/chromeos/network/cr_onc_types.js
@@ -29,6 +29,7 @@
  *   networkListItemConnected: string,
  *   networkListItemConnecting: string,
  *   networkListItemConnectingTo: string,
+ *   networkListItemInitializing: string,
  *   networkListItemNotConnected: string,
  *   vpnNameTemplate: string,
  * }}
